--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "word-widget-101",
   "version": "1.0.0",
-  "description": "",
+  "description": "A basic ExpressJS application configured with Form support and Handlebars templating.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.3"
-  }
+    "express-flash": "0.0.2",
+    "express-handlebars": "^5.3.3",
+    "express-session": "^1.17.2",
+    "pg": "^8.7.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/codex-academy/express-starter-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/codex-academy/express-starter-app/issues"
+  },
+  "homepage": "https://github.com/codex-academy/express-starter-app#readme"
 }
