--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A basic ExpressJS application configured with Form support and Handlebars templating.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/codex-academy/express-starter-app/issues"
   },
-  "homepage": "https://github.com/codex-academy/express-starter-app#readme"
+  "homepage": "https://github.com/codex-academy/express-starter-app#readme",
+  "devDependencies": {
+    "mocha": "^9.1.1"
+  }
 }
